k3s/200-movies.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-api
  template:
    metadata:
      labels:
        app: movies-api
        version: v1
    spec:
      containers:
        - name: movies-api
          image: skyglass/movies-api:1.0.0
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          resources:
            requests:
              memory: "200Mi"
            limits:
              memory: "400Mi"
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/info
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-ui
  template:
    metadata:
      labels:
        app: movies-ui
        version: v1
    spec:
      containers:
      - name: movies-ui
        image: skyglass/movies-ui:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "200Mi"
          limits:
            memory: "400Mi"            

---
apiVersion: v1
kind: Service
metadata:
  name: movies-api
spec:
  selector:
    app: movies-api
  ports:
    - port: 80
      name: http
      targetPort: 80
    - port: 4004
      name: http-mgm
      targetPort: 4004      


---
apiVersion: v1
kind: Service
metadata:
  name: movies-ui
spec:
  selector:
    app: movies-ui
  ports:
    - port: 80
      name: http
      targetPort: 80
