k3s/300-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: traefik-lb
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "traefik-product-composite-ingress"
spec:
  ingressClassName: "traefik-lb"
  rules:
  - host: "movie.skycomposer.net"
    http:
      paths:
      - path: "/product-composite"
        backend:
          serviceName: "product-composite"
          servicePort: 80

---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "traefik-keycloak-ingress"
spec:
  ingressClassName: "traefik-lb"
  rules:
  - host: "movie.skycomposer.net"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "keycloak"
          servicePort: 80
