k3s/302-istio-virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - movie.skycomposer.net
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak.default.svc.cluster.local
            port:
              number: 80
          headers:
            request:
              set:
                x-forwarded-proto: https


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - movie.skycomposer.net
  gateways:
    - istio-gateway
  http:
    - match:
      - uri:
          prefix: /grafana
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000            
          headers:
            request:
              set:
                x-forwarded-proto: https


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
    - movie.skycomposer.net
  gateways:
    - istio-gateway
  http:
    - match:
      - uri:
          prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001            
          headers:
            request:
              set:
                x-forwarded-proto: https

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing
spec:
  hosts:
    - movie.skycomposer.net
  gateways:
    - istio-gateway
  http:
    - match:
      - uri:
          prefix: /jaeger
      route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80            
          headers:
            request:
              set:
                x-forwarded-proto: https


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  hosts:
    - movie.skycomposer.net
  gateways:
    - istio-gateway
  http:
    - match:
      - uri:
          prefix: /ui
      route:
        - destination:
            host: movies-ui.default.svc.cluster.local
            port:
              number: 80            
          headers:
            request:
              set:
                x-forwarded-proto: https

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - movie.skycomposer.net
  gateways:
    - istio-gateway
  http:
    - match:
      - uri:
          prefix: /api
      route:
        - destination:
            host: movies-api.default.svc.cluster.local
            port:
              number: 80            
          headers:
            request:
              set:
                x-forwarded-proto: https
